framec_tests/common/tests/negative/test_transition_in_operation.frm
system TestSys2 {
    interface:
        go()

    machine:
        $A {
            go() {
                helper()
                return
            }
        }

    operations:
        helper() {
            // Not allowed: transitions in operations
            -> $A
        }
}

